flakes/kube/templates/istio.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: plex
  namespace: istio-system
spec:
  selector:
    app.kubernetes.io/name: plex-gateway
  servers:
    - port:
        number: 32400
        name: https-plex
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: plex-tls
      hosts:
        - "*"
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: plex-crowdsec
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: plex-gateway
  action: CUSTOM
  provider:
    name: crowdsec
  rules:
    - to:
        - operation:
            ports:
              - "32400"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: plex
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - plex
  http:
    - route:
        - destination:
            host: plex.media.svc.cluster.local
            port:
              number: 32400
